# SLIM

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
scripts/: analyze.py  calc.py  eval.sh  run_eval.sh
src/slim/: __init__.py  slim.py
src/slim/tools/: __init__.py  search_utils.py  serve_search.py
